# cythonize-package

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .releaserc.json  .ruff.toml  .versionrc.json  BRANCH_SUMMARY.md  BUILD_GUIDE.md  CHANGELOG.md  CLEANUP_GUIDE.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_NOTES.md  MONOREPO_SETUP.md  NEXT_STEPS.md  PRE_COMMIT_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RELEASE_NOTES.md  REUSABILITY_GUIDE.md  SETUP_SUMMARY.md  SUMMARY.md  TEMPLATE_USAGE.md  TESTING_SUMMARY.md  VERSIONING.md  WARNINGS_FIXED.md  WORKSPACE_MIGRATION.md  build.sh  clean.sh  docker-compose.yml  main.py  pyproject.toml  setup.py  test-ci-locally.sh  test_api.py  verify.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  build-all.sh  pyproject.toml
examples/services/example-service/: Dockerfile  build.sh  pyproject.toml  setup.py
examples/services/example-service/example_service/: __init__.py  config.py  handlers.py  main.py  routes.py
scripts/: init-monorepo.sh  release.sh  setup-new-project.sh  test-github-actions-locally.sh
src/cythonize_package/: __init__.py  app.py  models.py  service.py
