[project]
name = "cythonize-package"
version = "0.1.0"
description = "A FastAPI service with Cython-protected source code"
readme = "README.md"
authors = [
    { name = "Shubham Maurya", email = "shubham.maurya@invenics.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic[email]>=2.9.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = [
    "setuptools>=75.0.0",
    "Cython>=3.0.0,<4.0.0",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
# Tell setuptools where to find packages
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
cythonize_package = ["py.typed"]
