[project]
name = "examples-workspace"
version = "1.0.0"
description = "Complete workspace example with Cython protection"
requires-python = ">=3.11"
readme = "README.md"

[tool.uv.workspace]
members = [
    "services/*",
    "packages/*",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "Cython>=3.0.0,<4.0.0",
]
